# playground

./: README.md  package.yaml
fixtures/: input.txt
haskell/core/: Makefile  boom.core  boom.hs  helloworld.core  helloworld.hcr
haskell/endofunctor/: Main.hs
haskell/higher-ranks/: Main.hs
haskell/java-parse/: java-parse.cabal  package.yaml  stack.yaml
haskell/kmeans/: Main.hs  kmeans.cabal
haskell/list/: List.hs
haskell/lookup/: Main.hs
haskell/lrucache/: cabal.sandbox.config  lrucache.cabal
haskell/lrucache/.halcyon/: constraints
haskell/lrucache/Data/Cache/: LRU.hs
haskell/lrucache/Data/Cache/LRU/: Types.hs
haskell/lrucache/Tests/: Main.hs
haskell/maybe/: Main.hs
haskell/monoids/: Main.hs  free-monoids-playground.cabal
haskell/parsing/: README.md  package.yaml  parsing-playground.cabal  stack.yaml
haskell/parsing/fixtures/: input.txt
haskell/parsing/src/: Main.hs
haskell/polytypes/: polytypes.hs
haskell/reader/: Main.hs  cabal.sandbox.config  reader.cabal
haskell/reader-pipe/: Main.hs  README.markdown  cabal.sandbox.config  reader-pipe.cabal
haskell/reader-pipes/: Main.hs  reader-pipes.cabal
haskell/rec-sample/: package.yaml  stack.yaml
haskell/rec-sample/src/: Main.hs
haskell/records/: .gitignore  records.cabal  tomhttp.hs
haskell/scheme48/: .gitignore  Main.hs  README.markdown  cabal.sandbox.config  scheme48.cabal  stdlib.scm
haskell/scripts/: ts-backup  tsbackup.hs
haskell/state/: state.hs
haskell/sudoku/: Main.hs  Sudoku.hs  cabal.sandbox.config  sudoku.cabal
haskell/tree-serialize/: Library.hs  List.hs  Main.hs  package.yaml  stack.yaml
haskell/tree-serialize/test/: Spec.hs
haskell/trees/: Main.hs  Trees.hs  bench.html  trees.cabal
haskell/unionfind/: LICENSE  Main.hs  cabal.sandbox.config  unionfind.cabal
javascript/mergesort/: Main.hs  main.js
javascript/quickselect/: main.js
javascript/quicksort/: Main.hs
javascript/reader/: README.markdown  bower.json  entry.js  index.html  main.js  reader.js  webpack.config.js
javascript/rx-cache/: index.js  npm-shrinkwrap.json  package.json
javascript/trees/: invert-tree.js
purescript/aoc1701/: bower.json
purescript/aoc1701/src/: Main.purs
purescript/aoc1702/: bower.json
purescript/aoc1702/src/: Main.purs
purescript/cata/: bower.json
purescript/cata/src/: Main.purs
purescript/patternfunctor/: bower.json
purescript/patternfunctor/src/: Main.purs
python/bfs/: bfs.py
python/financius_fix/: convert.py
rust/calc/: calc.rs
scala/trees/: trees.sc
scala/trees/src/: trees.sc
src/: Main.hs
