name:                lrucache
version:             0.1.0.0
synopsis:            Simple LRU cache
homepage:            https://passy.me/
license:             Apache-2.0
license-file:        LICENSE
author:              Pascal Hartig
maintainer:          phartig@twitter.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Cache.LRU
  build-depends:       base >=4.7 && <4.8
                     , hashable
                     , vector
                     , psqueues
  default-language:    Haskell2010

Test-Suite hspec-tests
  main-is:             Tests/Main.hs
  type:                exitcode-stdio-1.0
  build-depends:       base >=4.7 && <4.8
                     , hspec
                     , QuickCheck
                     , hashable
                     , vector
                     , psqueues
