name:                scheme48
version:             0.1.0.0
synopsis:            Writing a Scheme in 48 Hours
license:             BSD3
license-file:        LICENSE
author:              Pascal Hartig
maintainer:          passy@twitter.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable scheme48
  main-is:             Main.hs
  build-depends:       base >=4.6 && <4.8,
                       parsec,
                       array,
                       mtl
  default-language:    Haskell2010
  Ghc-options:         -Wall
                       -O2
                       -fwarn-tabs
                       -fwarn-incomplete-record-updates
                       -fwarn-monomorphism-restriction
                       -fwarn-unused-do-bind
                       -fwarn-implicit-prelude
