name:                sudoku
version:             0.1.0.0
synopsis:            Sudoku solvers, based on Parallel and Concurrent Programming in Haskell by Simon Marlow
license:             BSD3
license-file:        LICENSE
author:              Pascal Hartig
maintainer:          passy@twitter.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

executable sudoku
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8,
                       parallel,
                       deepseq,
                       array
  default-language:    Haskell2010
  Ghc-options:         -Wall
                       -rtsopts -threaded
                       -O2
                       -fwarn-tabs
                       -fwarn-incomplete-record-updates
                       -fwarn-monomorphism-restriction
                       -fwarn-unused-do-bind
                       -fwarn-implicit-prelude
